--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
             </div>
 
             <div class="row card-toggle">
-                <div class="col-sm-6 mb-3">
+                <div class="col-sm-6 col-md-6 mb-3">
                     <div class="card">
                         <div class="card-body" data-toggle="collapse" href="#collapseBox_1" role="button" aria-expanded="false" aria-controls="collapseBox_1">
                             <h6 class="card-title">Перспективные ICO проекты.</h6>
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 mb-3">
+                <div class="col-sm-6 col-md-6 mb-3">
                     <div class="card">
                         <div class="card-body" data-toggle="collapse" href="#collapseBox_2" role="button" aria-expanded="false" aria-controls="collapseBox_2">
                             <h6 class="card-title">Реферальная система</h6>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
 
-                <div class="collapse col-sm-8" id="collapseBox_1">
+                <div class="collapse col-sm-8 col-md-10 mb-4" id="collapseBox_1">
                     <div class="toggle-element">
                         <p><strong>Выбор перспективного проекта ICO</strong> – это кропотливый и зачастую очень длительный процесс.</p>
                         <p>Для оптимизации этой задачи, мы привлекли в нашу Компанию лучших аналитиков, имеющих положительный опыт участия в ICO. В итоге, вам будут представлены аналитические отчеты по каждому проекту. На основании этой информации вы сможете принять взвешенное решение. Окончательный выбор, инвестировать в предложенный проект ICO или воздержаться, всегда остается за вами. Но, даже если вы решаете воздержаться от участия в предложенном проекте, вы остаетесь в маркетинге вместе с построенной вами структурой. В этом случае  вы не будете получать реферальные бонусы от работы команды, до оплаты вами одного из пакетов. Также, мы всегда предупреждаем, что работаем на рынке больших рисков, где можно как хорошо заработать, так и потерять деньги. При этом, Администрация Компании будет делать все возможное, чтобы минимизировать эти риски. Но вы должны понимать, что однозначных гарантий роста цены токенов - Компания  не дает. Мы гарантируем только положенные по маркетингу выплаты</p>
@@ -94,7 +94,7 @@
                     </div>
                 </div>
 
-                <div class="collapse col-sm-8" id="collapseBox_2">
+                <div class="collapse col-sm-8 col-md-10 mb-4" id="collapseBox_2">
                     <div class="toggle-element">
                         <p><strong>Выбор перспективного проекта ICO</strong> – это кропотливый и зачастую очень длительный процесс.</p>
                         <p>Для оптимизации этой задачи, мы привлекли в нашу Компанию лучших аналитиков, имеющих положительный опыт участия в ICO. В итоге, вам будут представлены аналитические отчеты по каждому проекту. На основании этой информации вы сможете принять взвешенное решение. Окончательный выбор, инвестировать в предложенный проект ICO или воздержаться, всегда остается за вами. Но, даже если вы решаете воздержаться от участия в предложенном проекте, вы остаетесь в маркетинге вместе с построенной вами структурой. В этом случае  вы не будете получать реферальные бонусы от работы команды, до оплаты вами одного из пакетов. Также, мы всегда предупреждаем, что работаем на рынке больших рисков, где можно как хорошо заработать, так и потерять деньги. При этом, Администрация Компании будет делать все возможное, чтобы минимизировать эти риски. Но вы должны понимать, что однозначных гарантий роста цены токенов - Компания  не дает. Мы гарантируем только положенные по маркетингу выплаты</p>
@@ -104,7 +104,7 @@
             </div>
 
             <div class="row mb-3">
-                <div class="card-deck col-sm-12">
+                <div class="card-deck col-sm-12 col-md-12">
                     <div class="card">
                         <div class="card-body">
                             <h6 class="card-title">Комбинированный маркетинг</h6>
@@ -121,7 +121,7 @@
             </div>
 
             <div class="row mb-3">
-                <div class="card-deck col-sm-12">
+                <div class="card-deck col-sm-12 col-md-12">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Бонус за личное приглашение</h5>
@@ -139,7 +139,7 @@
             </div>
 
             <div class="row mb-5">
-                <div class="card-deck col-sm-12">
+                <div class="card-deck col-sm-12 col-md-12">
                     <div class="card">
                         <div class="card-body">
                             <h6 class="card-title">Пассивный доход</h6>
@@ -311,10 +311,10 @@
             </div>
 
             <div class="row presentation-box">
-                <div class="col-sm-7 left-side-box">
+                <div class="col-sm-7 col-md-11 left-side-box">
                     <img src="images/box_5_1.png" class="box-5-image">
                 </div>
-                <div class="col-sm-5">
+                <div class="col-sm-5 col-md-11">
                     <p>Реклама в мессенджерах содержит в себе большой потенциал.</p>
                     <p>Но существующий инструментарий её управления не отвечает современным требованиям ни по наполнению функциональностью, ни по удобству использования.</p>
                     <p><strong>Мы решили изменить это.</strong></p>
@@ -323,42 +323,42 @@
             </div>
 
             <div class="row row-list-item-problem mb-4">
-                <h5 class="col-sm-7 mb-3 p-0">Платформа UMC призвана решить главные проблемы управления рекламой в рамках единой системы:</h5>
+                <h5 class="col-sm-7 col-md-10  mb-3 p-0">Платформа UMC призвана решить главные проблемы управления рекламой в рамках единой системы:</h5>
 
                 <div class="row">
-                    <div class="col-sm">
+                    <div class="col-sm col-md-12">
                         <div class="colored-rounds opst-4"></div>
                         <p class="pl-2">Отсутствие удобных систем для оперативного и понятного анализа плюсов и минусов продуктов и услуг</p>
                     </div>
 
-                    <div class="col-sm">
+                    <div class="col-sm col-md-12">
                         <span class="colored-rounds opst-5"></span>
                         <p class="pl-2">Отсутствие возможности достоверно проверить качество целевой аудитории</p>
                     </div>
 
-                    <div class="col-sm">
+                    <div class="col-sm col-md-12">
                         <span class="colored-rounds opst-6"></span>
                         <p class="pl-2">Высокие затраты времени на организацию процессов развития и продвижения площадок/продуктов/услуг</p>
                     </div>
 
-                    <div class="col-sm">
+                    <div class="col-sm col-md-12">
                         <span class="colored-rounds opst-7"></span>
                         <p class="pl-2">Дополнительные косвенные финансовые затраты и комиссии</p>
                     </div>
                 </div>
 
                 <div  class="row">
-                    <div class="col-sm">
+                    <div class="col-sm col-md-12">
                         <span class="colored-rounds opst-8"></span>
                         <p class="pl-2">Сложность контроля исполнения обязательств</p>
                     </div>
 
-                    <div class="col-sm">
+                    <div class="col-sm col-md-12">
                         <span class="colored-rounds opst-9"></span>
                         <p  class="pl-2">Сложность отбора подходящих рекламных каналов</p>
                     </div>
 
-                    <div class="col-sm">
+                    <div class="col-sm col-md-12">
                         <span class="colored-rounds"></span>
                         <p  class="pl-2">Проблемы с массовым запуском рекламных кампаний в мессенджерах</p>
                     </div>
@@ -371,11 +371,11 @@
 
             <div class="row mb-4">
                 <h4 class="font-weight-bold">Но для этого существуем мы — <br/>
-                    чтобы найти <span class="text-color-purple">решение без компромиссов</span></h4>
+                    чтобы найти <span class="text-color-purple text-resolve-problem">решение без компромиссов</span></h4>
             </div>
 
             <div class="row mb-5">
-                <div class="col-sm-5">
+                <div class="col-sm-5 col-md-10">
                     <h5>Как мы видим решение</h5>
                     <ul class="list-style-plus">
                         <li class="mb-3">Единая точка входа для владельцев канала и рекламодателей, что позволяет значительно снизить затраты времени и бюджета на организацию коммуникации</li>
@@ -386,22 +386,22 @@
                     </ul>
                 </div>
 
-                <div class="col-sm-7 right-side-box">
+                <div class="col-sm-7 col-md-10 right-side-box">
                     <h5>Этапы <span class="font-weight-bold">ICO</span></h5>
 
-                    <div class="col-4 step-ico active px-0">
+                    <div class="col-4 col-md-4 step-ico active px-0">
                         <h5 class="mb-0 title-step-ico font-weight-bold"><span class="text-color-crimson">1</span> Closed sale</h5>
                         <p class="text-color-light-gray ml-4">январь - июль 2018 г.</p>
                         <hr class="line-ico"/>
                     </div>
 
-                    <div class="col-4 step-ico px-0">
+                    <div class="col-4 col-md-4 step-ico px-0">
                         <h5 class="mb-0 title-step-ico font-weight-bold"><span class="text-color-light-gray">2</span> Pre sale</h5>
                         <p class="text-color-light-gray ml-4">с 1 июля 2018 г.</p>
                         <hr class="line-ico"/>
                     </div>
 
-                    <div class="col-3 step-ico px-0">
+                    <div class="col-3 col-md-3 step-ico px-0">
                         <h5 class="mb-0 title-step-ico font-weight-bold"><span class="text-color-light-gray">3</span> Public sale</h5>
                         <p class="text-color-light-gray ml-4">с 1 августа 2018 г.</p>
                     </div>
@@ -424,10 +424,10 @@
             </div>
 
             <div class="row mb-5">
-                <div class="col-sm-5 right-side-box">
+                <div class="col-sm-5 col-md-11 right-side-box">
                     <img src="images/box_5_1.png" class="image-box">
                 </div>
-                <div class="col-sm-7">
+                <div class="col-sm-7 col-md-11">
                     <ul class="list-style-plus">
                         <li class="mb-3 mt-0">
                             <div>
@@ -494,7 +494,7 @@
                     </div>
 
                     <div class="row d-flex flex-column mb-4">
-                        <button type="button" class="btn btn-gradient-border font-weight-bold col-sm-3 mb-1">Прикрепить файлы <span class="icon icon-clip ml-2"></span></button>
+                        <button type="button" class="btn btn-gradient-border font-weight-bold col-sm-3 col-md-5 mb-1">Прикрепить файлы <span class="icon icon-clip ml-2"></span></button>
                         <small id="passwordHelpBlock" class="form-text text-muted text-color-light-gray">
                             Это может быть презентация компании,<br/>
                             Публичная оферта, видео и т.д.
@@ -517,7 +517,7 @@
             </div>
 
             <div class="row">
-                <div class="col-sm">
+                <div class="col-sm col-md-11">
                     <ul class="list-style-plus">
                         <li>
                             <div>
@@ -539,7 +539,7 @@
                     </ul>
                 </div>
 
-                <div class="col-sm box-image">
+                <div class="col-sm box-image col-md-11">
                     <img src="images/people-4.png">
                     <button type="button" class="btn btn-gradient col-9 ml-5 btn-registration py-2">Зарегистрироваться <span class="icon icon-sign-up ml-3 align-middle"></span></button>
                 </div>
@@ -557,7 +557,7 @@
 
         <div class="container-fluid eighth-panel mb-5">
             <div class="row mb-4 row-card-bonus">
-                <div class="col-sm">
+                <div class="col-sm col-md-10">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm">
@@ -574,7 +574,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm">
+                <div class="col-sm col-md-10">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm">
@@ -593,7 +593,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm">
+                <div class="col-sm col-md-10">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm">
@@ -614,7 +614,7 @@
             </div>
 
             <div class="row mb-4 row-card-bonus">
-                <div class="col-sm">
+                <div class="col-sm col-md-10">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm">
@@ -632,7 +632,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm">
+                <div class="col-sm col-md-10">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm">
@@ -650,7 +650,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm">
+                <div class="col-sm col-md-10">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm">
@@ -673,7 +673,7 @@
 
         <div class="container eighth-panel mb-5">
             <div class="d-flex align-items-baseline justify-content-center mb-4">
-                <button type="button" class="btn btn-gradient col-sm-3 mr-3">Зарегистрироваться</button>
+                <button type="button" class="btn btn-gradient col-sm-3  col-md-5 mr-3">Зарегистрироваться</button>
                 <p class="mr-2 mt-4">или</p> <a href="" class="btn-lang">Войдите в аккаунт</a>
             </div>
 
@@ -712,7 +712,7 @@
             </div>
 
             <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-gradient-border font-weight-bold col-sm-3 mb-1">Больше полезных видео</button>
+                <button type="button" class="btn btn-gradient-border font-weight-bold col-sm-3  col-md-5 mb-1">Больше полезных видео</button>
             </div>
 
         </div>
