--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class="container-fluid header-panel">
             <div class="row">
-                <div class="col-7 left-side-box">
+                <div class="col-7 col-lg-7 left-side-box">
                     <div class="row">
                         <div class="logo">
                             <a href="#" >
@@ -42,7 +42,7 @@
                     </div>
                 </div>
 
-                <div class="col-5 right-side-box">
+                <div class="col-5 col-lg-5 right-side-box">
                     <div class="row">
                         <h1 class="king-size mb-5 text-border-white"><span class="who">Кто</span><br/>новый король?</h1>
 
