--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,8 @@
                         <h1 class="king-size mb-5 text-border-white"><span class="who">Кто</span><br/>новый король?</h1>
 
                         <div class="btn-group" role="group" aria-label="Registration">
-                            <button type="button" class="btn btn-transparent font-weight-bold">Регистрация <span class="icon icon-sign-up align-middle ml-2"></span></button>
-                            <button type="button" class="btn btn-transparent font-weight-bold">Вход <span class="icon icon-sign-in align-middle ml-2"></span></button>
+                            <a class="btn btn-transparent font-weight-bold">Регистрация <span class="icon icon-sign-up align-middle ml-2"></span></a>
+                            <a class="btn btn-transparent font-weight-bold">Вход <span class="icon icon-sign-in align-middle ml-2"></span></a>
                         </div>
                     </div>
                 </div>
