--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                     <div class="row flex-column">
                         <h1 class="title-big-1 font-weight-bold">Стань королем<br/><span class="text-color-purple">нового рынка</span></h1>
                         <p class="text-color-light-gray p-0 col-lg-7">Рынок ICO - молодой, но динамика его развития впечатляет! Зарабатывать на ICO  можно и нужно! </p>
-                        <button type="button" class="btn btn-gradient col-lg-4">Но как?</button>
+                        <button type="button" class="btn btn-gradient col-lg-4 col-md-5">Но как?</button>
                     </div>
 
                     <div>
