--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                     <div class="row flex-column">
                         <h1 class="title-big-1 font-weight-bold">Стань королем<br/><span class="text-color-purple">нового рынка</span></h1>
                         <p class="text-color-light-gray p-0 col-lg-7">Рынок ICO - молодой, но динамика его развития впечатляет! Зарабатывать на ICO  можно и нужно! </p>
-                        <button type="button" class="btn btn-gradient col-lg-4 col-md-5">Но как?</button>
+                        <a class="btn btn-gradient col-lg-4 col-md-5">Но как?</a>
                     </div>
 
                     <div>
@@ -35,9 +35,9 @@
 
                     <div class="row">
                         <div class="btn-group" role="group" aria-label="Basic example">
-                            <button type="button" class="btn btn-lang">ENG</button>
-                            <button type="button" class="btn btn-lang active">РУС</button>
-                            <button type="button" class="btn btn-lang">УКР</button>
+                            <a class="btn btn-lang">ENG</a>
+                            <a class="btn btn-lang active">РУС</a>
+                            <a class="btn btn-lang">УКР</a>
                         </div>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                         <div class="card-body">
                             <h6 class="card-title">Карьерный рост</h6>
                             <p class="card-text float-left">Подниматься по карьерной лестнице выгодно всем!</p>
-                            <button type="button" class="btn btn-gradient float-right"><span class="icon icon-arrow-down"></span></button>
+                            <a class="btn btn-gradient float-right"><span class="icon icon-arrow-down"></span></a>
                         </div>
                     </div>
                 </div>
@@ -321,7 +321,7 @@
                     <p>Реклама в мессенджерах содержит в себе большой потенциал.</p>
                     <p>Но существующий инструментарий её управления не отвечает современным требованиям ни по наполнению функциональностью, ни по удобству использования.</p>
                     <p><strong>Мы решили изменить это.</strong></p>
-                    <button type="button" class="btn btn-gradient-border font-weight-bold col-8">Смотреть презентацию <span class="icon icon-play text-color-light-gray ml-2 font-size-middle"></span></button>
+                    <a class="btn btn-gradient-border font-weight-bold col-8">Смотреть презентацию <span class="icon icon-play text-color-light-gray ml-2 font-size-middle"></span></a>
                 </div>
             </div>
 
@@ -544,7 +544,7 @@
 
                 <div class="col-sm box-image col-md-11 col-lg-7">
                     <img src="images/people-4.png">
-                    <button type="button" class="btn btn-gradient col-9 ml-5 btn-registration py-2">Зарегистрироваться <span class="icon icon-sign-up ml-3 align-middle"></span></button>
+                    <a class="btn btn-gradient col-9 ml-5 btn-registration py-2">Зарегистрироваться <span class="icon icon-sign-up ml-3 align-middle"></span></a>
                 </div>
             </div>
 
@@ -676,7 +676,7 @@
 
         <div class="container eighth-panel mb-5">
             <div class="d-flex align-items-baseline justify-content-center mb-4">
-                <button type="button" class="btn btn-gradient col-sm-3  col-md-5 mr-3">Зарегистрироваться</button>
+                <a class="btn btn-gradient col-sm-3  col-md-5 mr-3">Зарегистрироваться</a>
                 <p class="mr-2 mt-4">или</p> <a href="" class="btn-lang">Войдите в аккаунт</a>
             </div>
 
@@ -715,7 +715,7 @@
             </div>
 
             <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-gradient-border font-weight-bold col-sm-3  col-md-5 mb-1">Больше полезных видео</button>
+                <a class="btn btn-gradient-border font-weight-bold col-sm-3  col-md-5 mb-1">Больше полезных видео</a>
             </div>
 
         </div>
