--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
 
                     <div class="row flex-column">
                         <h1 class="title-big-1 font-weight-bold">Стань королем<br/><span class="text-color-purple">нового рынка</span></h1>
-                        <p class="text-color-light-gray p-0 col-lg-7">Рынок ICO - молодой, но динамика его развития впечатляет! Зарабатывать на ICO  можно и нужно! </p>
-                        <a class="btn btn-gradient col-lg-4 col-md-5">Но как?</a>
+                        <p class="text-color-light-gray p-0 col-lg-7 col-7">Рынок ICO - молодой, но динамика его развития впечатляет! Зарабатывать на ICO  можно и нужно! </p>
+                        <a class="btn btn-gradient col-lg-4 col-md-5 col-7">Но как?</a>
                     </div>
 
                     <div>
@@ -57,6 +57,14 @@
 
         <div class="container second-panel my-5">
 
+            <div class="left-transform">
+                <h1 class="text-1 font-weight-bold text-border-crimson">Все хотят занять трон</h1>
+            </div>
+
+            <div class="right-transform">
+                <h1 class="text-1 font-weight-bold text-border-crimson">Но он только один</h1>
+            </div>
+
             <div class="row">
                 <h1 class="font-weight-bold mb-5 text-1">Теперь читай <span class="text-color-purple">внимательно<span class="text-border-purple">внимательно</span></span></h1>
                 <p class="mb-4 col-lg-9 p-0"><strong>King Market Token Sale (KMTS)</strong> — это универсальная платформа для реализации современных технологий микрофинансирования перспективных бизнес проектов, а также продвижения их продуктов на рынки разных стран.</p>
@@ -67,7 +75,7 @@
             </div>
 
             <div class="row card-toggle">
-                <div class="col-sm-6 col-md-6 mb-3">
+                <div class="col-sm-11 col-md-6 mb-3 p-0">
                     <div class="card">
                         <div class="card-body" data-toggle="collapse" href="#collapseBox_1" role="button" aria-expanded="false" aria-controls="collapseBox_1">
                             <h6 class="card-title">Перспективные ICO проекты.</h6>
@@ -76,7 +84,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-6 mb-3">
+                <div class="col-sm-11 col-md-6 mb-3 p-0">
                     <div class="card">
                         <div class="card-body" data-toggle="collapse" href="#collapseBox_2" role="button" aria-expanded="false" aria-controls="collapseBox_2">
                             <h6 class="card-title">Реферальная система</h6>
@@ -86,7 +94,7 @@
                     </div>
                 </div>
 
-                <div class="collapse col-sm-8 col-md-10 mb-4" id="collapseBox_1">
+                <div class="collapse col-sm-11 col-md-10 mb-4" id="collapseBox_1">
                     <div class="toggle-element">
                         <p><strong>Выбор перспективного проекта ICO</strong> – это кропотливый и зачастую очень длительный процесс.</p>
                         <p>Для оптимизации этой задачи, мы привлекли в нашу Компанию лучших аналитиков, имеющих положительный опыт участия в ICO. В итоге, вам будут представлены аналитические отчеты по каждому проекту. На основании этой информации вы сможете принять взвешенное решение. Окончательный выбор, инвестировать в предложенный проект ICO или воздержаться, всегда остается за вами. Но, даже если вы решаете воздержаться от участия в предложенном проекте, вы остаетесь в маркетинге вместе с построенной вами структурой. В этом случае  вы не будете получать реферальные бонусы от работы команды, до оплаты вами одного из пакетов. Также, мы всегда предупреждаем, что работаем на рынке больших рисков, где можно как хорошо заработать, так и потерять деньги. При этом, Администрация Компании будет делать все возможное, чтобы минимизировать эти риски. Но вы должны понимать, что однозначных гарантий роста цены токенов - Компания  не дает. Мы гарантируем только положенные по маркетингу выплаты</p>
@@ -94,7 +102,7 @@
                     </div>
                 </div>
 
-                <div class="collapse col-sm-8 col-md-10 mb-4" id="collapseBox_2">
+                <div class="collapse col-sm-11 col-md-10 mb-4" id="collapseBox_2">
                     <div class="toggle-element">
                         <p><strong>Выбор перспективного проекта ICO</strong> – это кропотливый и зачастую очень длительный процесс.</p>
                         <p>Для оптимизации этой задачи, мы привлекли в нашу Компанию лучших аналитиков, имеющих положительный опыт участия в ICO. В итоге, вам будут представлены аналитические отчеты по каждому проекту. На основании этой информации вы сможете принять взвешенное решение. Окончательный выбор, инвестировать в предложенный проект ICO или воздержаться, всегда остается за вами. Но, даже если вы решаете воздержаться от участия в предложенном проекте, вы остаетесь в маркетинге вместе с построенной вами структурой. В этом случае  вы не будете получать реферальные бонусы от работы команды, до оплаты вами одного из пакетов. Также, мы всегда предупреждаем, что работаем на рынке больших рисков, где можно как хорошо заработать, так и потерять деньги. При этом, Администрация Компании будет делать все возможное, чтобы минимизировать эти риски. Но вы должны понимать, что однозначных гарантий роста цены токенов - Компания  не дает. Мы гарантируем только положенные по маркетингу выплаты</p>
@@ -103,13 +111,12 @@
                 </div>
             </div>
 
-            <div class="row mb-3">
-                <div class="card-deck col-sm-12 col-md-12">
+            <div class="row mb-3 p-0">
+                <div class="card-deck col-md-12">
                     <div class="card">
-                        <div class="card-body">
+                        <div class="card-body ">
                             <h6 class="card-title">Комбинированный маркетинг</h6>
                             <p class="card-text">Почему именно комбтнтрованный маркетинг?</p>
-
                         </div>
                     </div>
                     <div class="card">
@@ -120,8 +127,8 @@
                 </div>
             </div>
 
-            <div class="row mb-3">
-                <div class="card-deck col-sm-12 col-md-12">
+            <div class="row mb-3 p-0">
+                <div class="card-deck col-md-12">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Бонус за личное приглашение</h5>
@@ -138,8 +145,8 @@
                 </div>
             </div>
 
-            <div class="row mb-5">
-                <div class="card-deck col-sm-12 col-md-12">
+            <div class="row mb-5 p-0">
+                <div class="card-deck col-md-12">
                     <div class="card">
                         <div class="card-body">
                             <h6 class="card-title">Пассивный доход</h6>
@@ -314,10 +321,10 @@
             </div>
 
             <div class="row presentation-box">
-                <div class="col-sm-7 col-md-11 col-lg-6 left-side-box">
+                <div class="col-md-11 col-lg-6 left-side-box">
                     <img src="images/box_5_1.png" class="box-5-image">
                 </div>
-                <div class="col-sm-5 col-md-11 col-lg-5">
+                <div class="col-md-11 col-lg-5">
                     <p>Реклама в мессенджерах содержит в себе большой потенциал.</p>
                     <p>Но существующий инструментарий её управления не отвечает современным требованиям ни по наполнению функциональностью, ни по удобству использования.</p>
                     <p><strong>Мы решили изменить это.</strong></p>
@@ -326,42 +333,42 @@
             </div>
 
             <div class="row row-list-item-problem mb-4">
-                <h5 class="col-sm-7 col-md-10  col-lg-7 mb-3 p-0">Платформа UMC призвана решить главные проблемы управления рекламой в рамках единой системы:</h5>
+                <h5 class="col-sm-9 col-md-10 col-lg-7 mb-3 p-0">Платформа UMC призвана решить главные проблемы управления рекламой в рамках единой системы:</h5>
 
                 <div class="row">
-                    <div class="col-sm col-md-12 col-lg-3">
+                    <div class="col-md-12 col-lg-3">
                         <div class="colored-rounds opst-4"></div>
                         <p class="pl-2">Отсутствие удобных систем для оперативного и понятного анализа плюсов и минусов продуктов и услуг</p>
                     </div>
 
-                    <div class="col-sm col-md-12 col-lg-3">
+                    <div class="col-md-12 col-lg-3">
                         <span class="colored-rounds opst-5"></span>
                         <p class="pl-2">Отсутствие возможности достоверно проверить качество целевой аудитории</p>
                     </div>
 
-                    <div class="col-sm col-md-12 col-lg-3">
+                    <div class="col-md-12 col-lg-3">
                         <span class="colored-rounds opst-6"></span>
                         <p class="pl-2">Высокие затраты времени на организацию процессов развития и продвижения площадок/продуктов/услуг</p>
                     </div>
 
-                    <div class="col-sm col-md-12 col-lg-3">
+                    <div class="col-md-12 col-lg-3">
                         <span class="colored-rounds opst-7"></span>
                         <p class="pl-2">Дополнительные косвенные финансовые затраты и комиссии</p>
                     </div>
                 </div>
 
                 <div  class="row">
-                    <div class="col-sm col-md-12 col-lg-3">
+                    <div class="col-md-12 col-lg-3">
                         <span class="colored-rounds opst-8"></span>
                         <p class="pl-2">Сложность контроля исполнения обязательств</p>
                     </div>
 
-                    <div class="col-sm col-md-12 col-lg-3">
+                    <div class="col-md-12 col-lg-3">
                         <span class="colored-rounds opst-9"></span>
                         <p  class="pl-2">Сложность отбора подходящих рекламных каналов</p>
                     </div>
 
-                    <div class="col-sm col-md-12 col-lg-3">
+                    <div class="col-md-12 col-lg-3">
                         <span class="colored-rounds"></span>
                         <p  class="pl-2">Проблемы с массовым запуском рекламных кампаний в мессенджерах</p>
                     </div>
@@ -378,7 +385,7 @@
             </div>
 
             <div class="row mb-5">
-                <div class="col-sm-5 col-md-10 col-lg-5">
+                <div class="col-md-10 col-lg-5">
                     <h5>Как мы видим решение</h5>
                     <ul class="list-style-plus">
                         <li class="mb-3">Единая точка входа для владельцев канала и рекламодателей, что позволяет значительно снизить затраты времени и бюджета на организацию коммуникации</li>
@@ -389,12 +396,12 @@
                     </ul>
                 </div>
 
-                <div class="col-sm-7 col-md-10 col-lg-7 right-side-box">
+                <div class="col-md-10 col-lg-7 right-side-box">
                     <h5>Этапы <span class="font-weight-bold">ICO</span></h5>
 
                     <div class="col-4 col-md-4 col-lg-4 step-ico active px-0">
                         <h5 class="mb-0 title-step-ico font-weight-bold"><span class="text-color-crimson">1</span> Closed sale</h5>
-                        <p class="text-color-light-gray ml-4">январь - июль 2018 г.</p>
+                        <p class="text-color-light-gray ml-4">январь - июль 2018 г.ffffffffffffff</p>
                         <hr class="line-ico"/>
                     </div>
 
@@ -427,10 +434,10 @@
             </div>
 
             <div class="row mb-5">
-                <div class="col-sm-5 col-md-11 col-lg-5 right-side-box">
+                <div class="col-md-11 col-lg-5 right-side-box">
                     <img src="images/people.png" class="image-box">
                 </div>
-                <div class="col-sm-7 col-md-11 col-lg-7">
+                <div class="col-md-11 col-lg-7">
                     <ul class="list-style-plus">
                         <li class="mb-3 mt-0">
                             <div>
@@ -497,7 +504,7 @@
                     </div>
 
                     <div class="row d-flex flex-column mb-4">
-                        <button type="button" class="btn btn-gradient-border font-weight-bold col-sm-3 col-md-5 col-lg-3 mb-1">Прикрепить файлы <span class="icon icon-clip ml-2"></span></button>
+                        <button type="button" class="btn btn-gradient-border font-weight-bold col-sm-7 col-md-5 col-lg-3 mb-1">Прикрепить файлы <span class="icon icon-clip ml-2"></span></button>
                         <small id="passwordHelpBlock" class="form-text text-muted text-color-light-gray">
                             Это может быть презентация компании,<br/>
                             Публичная оферта, видео и т.д.
@@ -505,7 +512,7 @@
                     </div>
 
                     <div class="row d-flex flex-column">
-                        <button type="button" class="btn btn-gradient col-sm-5 col-lg-5 mb-4">Отправить заявку</button>
+                        <button type="button" class="btn btn-gradient col-sm-8 col-lg-5 mb-4">Отправить заявку</button>
                         <p class="text-color-light-gray">Рассмотрение заявки происходит в течении <sapn class="font-weight-bold">1-2 недель</sapn></p>
                     </div>
                 </form>
@@ -520,12 +527,12 @@
             </div>
 
             <div class="row">
-                <div class="col-sm col-md-11 col-lg-5">
+                <div class="col-md-11 col-lg-5">
                     <ul class="list-style-plus">
                         <li>
                             <div>
                                 <h5 class="font-weight-bold">Пакеты для входа в бизнес</h5>
-                                <p class="text-color-light-gray">учитывают возможности и интересы как крупных, так и мелких инвесторов из разных социальных слоев населения</p>
+                                <p>учитывают возможности и интересы как крупных, так и мелких инвесторов из разных социальных слоев населения</p>
                             </div>
                         </li>
                         <li>
@@ -542,7 +549,7 @@
                     </ul>
                 </div>
 
-                <div class="col-sm box-image col-md-11 col-lg-7">
+                <div class="box-image col-md-11 col-lg-7">
                     <img src="images/people-4.png">
                     <a class="btn btn-gradient col-9 ml-5 btn-registration py-2">Зарегистрироваться <span class="icon icon-sign-up ml-3 align-middle"></span></a>
                 </div>
@@ -560,7 +567,7 @@
 
         <div class="container-fluid eighth-panel mb-5">
             <div class="row mb-4 row-card-bonus">
-                <div class="col-sm col-md-10 col-lg-4">
+                <div class="col-sm-9 col-md-10 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm col-lg">
@@ -577,7 +584,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm col-md-10 col-lg-4">
+                <div class="col-sm-9 col-md-10 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm">
@@ -596,7 +603,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm col-md-10 col-lg-4">
+                <div class="col-sm-9 col-md-10 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm">
@@ -614,10 +621,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="row mb-4 row-card-bonus">
-                <div class="col-sm col-md-10 col-lg-4">
+                <div class="col-sm-9 col-md-10 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm">
@@ -635,7 +640,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm col-md-10 col-lg-4">
+
+                <div class="col-sm-9 col-md-10 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm">
@@ -653,7 +659,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm col-md-10 col-lg-4">
+
+                <div class="col-sm-9 col-md-10 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm">
@@ -676,7 +683,7 @@
 
         <div class="container eighth-panel mb-5">
             <div class="d-flex align-items-baseline justify-content-center mb-4">
-                <a class="btn btn-gradient col-sm-3  col-md-5 mr-3">Зарегистрироваться</a>
+                <a class="btn btn-gradient col-sm-5  col-md-5 mr-3">Зарегистрироваться</a>
                 <p class="mr-2 mt-4">или</p> <a href="" class="btn-lang">Войдите в аккаунт</a>
             </div>
 
@@ -715,7 +722,7 @@
             </div>
 
             <div class="d-flex justify-content-center">
-                <a class="btn btn-gradient-border font-weight-bold col-sm-3  col-md-5 mb-1">Больше полезных видео</a>
+                <a class="btn btn-gradient-border font-weight-bold col-8 col-sm-6 col-md-5 mb-1">Больше полезных видео</a>
             </div>
 
         </div>
